fix burger menu overflow. Fix of the scroll show when crossing between pages. Make header fixed

--- a/src/components/NavBar/NavLinks/style.module.scss
+++ b/src/components/NavBar/NavLinks/style.module.scss
@@ -4,7 +4,6 @@
   position: fixed;
   right: -5px;
   top: 0;
-  min-width: 320px;
   color: rgba(0, 0, 0, 0.8);
 
   .body {
