--- a/src/components/NavBar/style.scss
+++ b/src/components/NavBar/style.scss
@@ -4,7 +4,7 @@
 }
 
 .bg-filter {
-  position: sticky; /* Фіксуємо елемент на екрані */
+  position: fixed; /* Фіксуємо елемент на екрані */
   top: 0;
   left: 0;
   width: 100%;
